added updates for images and broken out into blocks

--- a/content/homepage/1-a.md
+++ b/content/homepage/1-a.md
@@ -4,8 +4,8 @@ block_type: a
 header:
 description: We are a multimedia design agency specialising in brand development, creative communications and digital solutions.
 sub_desc:
-footer:
-background_image: /assets/pug.jpg
+footer: some footer
+background_image:
 link:
 color: orange
 ---
