--- a/content/homepage/10-a.md
+++ b/content/homepage/10-a.md
@@ -2,10 +2,10 @@
 number: 10
 block_type: a
 header:
-description: We are a multimedia design agency specialising in brand development, creative communications and digital solutions.
-sub_desc:
+description: "Mentoring portal:"
+sub_desc: HSBC
 footer:
-background_image: /assets/pug.jpg
-link:
+background_image: hsbc-mentoring-portal.jpg
+link: /
 color: green
 ---
