--- a/content/homepage/13-c.md
+++ b/content/homepage/13-c.md
@@ -2,10 +2,10 @@
 number: 13
 block_type: c
 header:
-description: We are a multimedia design agency specialising in brand development, creative communications and digital solutions.
-sub_desc:
+description: "Mobile booking app:"
+sub_desc: Waves
 footer:
-background_image: /assets/pug.jpg
-link:
+background_image: waves.jpg
+link: /
 color: green
 ---
