--- a/content/homepage/14-c.md
+++ b/content/homepage/14-c.md
@@ -2,10 +2,10 @@
 number: 14
 block_type: c
 header:
-description: We are a multimedia design agency specialising in brand development, creative communications and digital solutions.
+description: About us
 sub_desc:
 footer:
-background_image: /assets/pug.jpg
-link:
+background_image: arthaus-office.jpg
+link: /
 color: blue
 ---
