--- a/content/homepage/16-b.md
+++ b/content/homepage/16-b.md
@@ -2,10 +2,10 @@
 number: 16
 block_type: b
 header:
-description: We are a multimedia design agency specialising in brand development, creative communications and digital solutions.
+description: Employee engagement
 sub_desc:
 footer:
-background_image: /assets/pug.jpg
-link:
+background_image: tech-cafe.jpg
+link: /
 color: maroon
 ---
