--- a/content/homepage/3-c.md
+++ b/content/homepage/3-c.md
@@ -2,10 +2,10 @@
 number: 3
 block_type: c
 header:
-description: We are a multimedia design agency specialising in brand development, creative communications and digital solutions.
-sub_desc:
+description: "Branding & website design:"
+sub_desc: Simpson Spence Young
 footer:
-background_image: /assets/pug.jpg
-link:
+background_image: ssy.jpg
+link: /
 color: green
 ---
