--- a/content/homepage/4-b.md
+++ b/content/homepage/4-b.md
@@ -2,10 +2,10 @@
 number: 4
 block_type: b
 header:
-description: We are a multimedia design agency specialising in brand development, creative communications and digital solutions.
-sub_desc:
+description: Talent toolkit
+sub_desc: Bupa
 footer:
-background_image: /assets/pug.jpg
-link:
+background_image: talent-toolkit.jpg
+link: /
 color: maroon
 ---
