--- a/content/homepage/6-d.md
+++ b/content/homepage/6-d.md
@@ -2,10 +2,10 @@
 number: 6
 block_type: d
 header:
-description: We are a multimedia design agency specialising in brand development, creative communications and digital solutions.
+description: Get in touch
 sub_desc:
 footer:
-background_image: /assets/pug.jpg
-link:
+background_image:
+link: /
 color: blue
 ---
