--- a/content/homepage/8-d.md
+++ b/content/homepage/8-d.md
@@ -2,10 +2,10 @@
 number: 8
 block_type: d
 header:
-description: We are a multimedia design agency specialising in brand development, creative communications and digital solutions.
+description: Inspiring & exceeding expectations for 25 years
 sub_desc:
 footer:
-background_image: /assets/pug.jpg
+background_image:
 link:
 color: blue
 ---
