--- a/content/homepage/9-b.md
+++ b/content/homepage/9-b.md
@@ -1,11 +1,11 @@
 ---
 number: 9
 block_type: b
-header:
-description: We are a multimedia design agency specialising in brand development, creative communications and digital solutions.
+header: Digital expertise
+description: Conceiving, building and supporting a wise range of user centric sites, portals and tools
 sub_desc:
 footer:
-background_image: /assets/pug.jpg
-link:
+background_image:
+link: /
 color: blue
 ---
