--- a/content/homepage/11-b.md
+++ b/content/homepage/11-b.md
@@ -1,11 +1,11 @@
 ---
 number: 11
 block_type: b
-header:
-description: We are a multimedia design agency specialising in brand development, creative communications and digital solutions.
-sub_desc:
+header: Looks like good design
+description: Interesting design that caught our eye this week...
+sub_desc: "Updated: 30 Mar 20"
 footer:
-background_image: /assets/pug.jpg
-link:
+background_image:
+link: /
 color: green
 ---
