--- a/content/homepage/12-c.md
+++ b/content/homepage/12-c.md
@@ -2,10 +2,10 @@
 number: 12
 block_type: c
 header:
-description: We are a multimedia design agency specialising in brand development, creative communications and digital solutions.
-sub_desc:
+description: "Branding:"
+sub_desc: HSBC University
 footer:
-background_image: /assets/pug.jpg
-link:
+background_image: hsbc_university.jpg
+link: /
 color: green
 ---
