--- a/content/homepage/15-c.md
+++ b/content/homepage/15-c.md
@@ -2,10 +2,10 @@
 number: 15
 block_type: c
 header:
-description: We are a multimedia design agency specialising in brand development, creative communications and digital solutions.
-sub_desc:
+description: "Corporate website:"
+sub_desc: Agnovos
 footer:
-background_image: /assets/pug.jpg
-link:
+background_image: agnovos.jpg
+link: /
 color: blue
 ---
