--- a/content/homepage/17-b.md
+++ b/content/homepage/17-b.md
@@ -1,11 +1,11 @@
 ---
 number: 17
 block_type: b
-header:
-description: We are a multimedia design agency specialising in brand development, creative communications and digital solutions.
+header: Find us
+description: 24/26 Old Brewery Lane, New Street, Henley on Thames, Oxon, RG9 2DE
 sub_desc:
 footer:
-background_image: /assets/pug.jpg
-link:
+background_image:
+link: /
 color: orange
 ---
