--- a/content/homepage/2-c.md
+++ b/content/homepage/2-c.md
@@ -2,10 +2,10 @@
 number: 2
 block_type: c
 header:
-description: We are a multimedia design agency specialising in brand development, creative communications and digital solutions.
-sub_desc:
+description: Insights & Ideas
+sub_desc: Colour of the year 2020
 footer:
-background_image: /assets/pug.jpg
-link:
+background_image: colour-of-year-2020.jpg
+link: /
 color: blue
 ---
