--- a/content/homepage/5-d.md
+++ b/content/homepage/5-d.md
@@ -2,10 +2,10 @@
 number: 5
 block_type: d
 header:
-description: We are a multimedia design agency specialising in brand development, creative communications and digital solutions.
+description: Our expertise
 sub_desc:
 footer:
-background_image: /assets/pug.jpg
-link:
-color: maroon
+background_image:
+link: /
+color: green
 ---
