--- a/content/homepage/7-d.md
+++ b/content/homepage/7-d.md
@@ -2,10 +2,10 @@
 number: 7
 block_type: d
 header:
-description: We are a multimedia design agency specialising in brand development, creative communications and digital solutions.
+description: Clients
 sub_desc:
 footer:
-background_image: /assets/pug.jpg
-link:
+background_image:
+link: /
 color: maroon
 ---
